manifests/config/ddns.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-ddns
  namespace: default
  labels:
    app: cloudflare-ddns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflare-ddns
  template:
    metadata:
      labels:
        app: cloudflare-ddns
    spec:
      containers:
      - name: ubuntu
        image: kevinchanaka/ubuntu-user:latest
        command: ["/bin/bash"]
        args: ["/app/cloudflare-ddns.sh"]
        volumeMounts:
        - name: script
          mountPath: /app
      volumes:
      - name: script
        configMap:
          name: cloudflare-ddns-script
